# mendel

./: .dockerignore  .gitignore  .patchbot.yml.example  Dockerfile  LICENSE  README.md  pyproject.toml
config/: targets.yaml.example
deploy/: deploy.sh  scheduler.yaml
scripts/patch_bot/: __main__.py
scripts/patch_bot/analysis/: changelog.py  dep_tree.py  dependency_delta.py  importers.py  manifest.py  project_surface.py  registry.py
scripts/patch_bot/core/: config.py  grouping.py  orchestrator.py  remediation.py  versions.py  workspace.py
scripts/patch_bot/github/: advisory.py  alerts.py  client.py  prs.py
scripts/patch_bot/llm/: anthropic_client.py  budget.py
scripts/patch_bot/llm/prompts/: risk_summary.md
scripts/patch_bot/lockfile_updaters/: base.py  node_npm.py  node_pnpm.py  node_yarn.py  python_pip_tools.py  python_pipenv.py  python_poetry.py  python_requirements.py
scripts/patch_bot/render/: pr_body.py
scripts/patch_bot/render/templates/: pr_body.md.j2
scripts/patch_bot/runtimes/: __init__.py  base.py  gae.py  generic.py
scripts/patch_bot/runtimes/data/: gae_runtimes.yaml
scripts/patch_bot/tests/: test_dep_tree.py  test_gae_runtime_check.py  test_grouping.py  test_manifest.py  test_pr_body_render.py  test_pr_marker_parsing.py  test_python_requirements_updater.py  test_registry.py  test_remediation.py  test_updater_detection.py  test_versions.py
scripts/patch_bot/web/: app.py  auth.py
